force-app/main/default/objects/Batch__c/Batch__c.object-meta.xml
<CustomObject>
    <description>Object used to track the details of each batch of kombucha.</description>
    <label>Batch</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>