force-app/main/default/objects/Batch__c/fields/ActualFirstFermentationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActualFirstFermentationEndDate__c</fullName>
    <description>The date that the first fermentation actually ended and the batch was bottled.</description>
    <inlineHelpText>The date that the first fermentation actually ended and the batch was bottled.</inlineHelpText>
    <label>Actual First Fermentation End Date</label>
    <type>Date</type>
</CustomField>