force-app/main/default/objects/Batch__c/fields/ActualSecondFermentationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ActualSecondFermentationEndDate__c</fullName>
    <description>Date that the second fermentation ended.</description>
    <inlineHelpText>Date that the second fermentation ended.</inlineHelpText>
    <label>Actual Second Fermentation End Date</label>
    <type>Date</type>
</CustomField>