force-app/main/default/objects/Batch__c/fields/FirstFermentationDuration__c.field-meta.xml
<CustomField>
    <fullName>FirstFermentationDuration__c</fullName>
    <description>Number of days the batch was or currently is in the first fermentation stage.</description>
    <formula>BLANKVALUE(ActualFirstFermentationEndDate__c, TODAY()) - FirstFermentationStartDate__c</formula>
    <inlineHelpText>Number of days the batch was or currently is in the first fermentation stage.</inlineHelpText>
    <label>First Fermentation Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>