force-app/main/default/objects/Batch__c/fields/FirstFermentationEndDate__c.field-meta.xml
<CustomField>
    <fullName>FirstFermentationEndDate__c</fullName>
    <description>Date when the batch should be bottled.</description>
    <formula>FirstFermentationStartDate__c + 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when the batch should be bottled.</inlineHelpText>
    <label>First Fermentation End Date</label>
    <type>Date</type>
</CustomField>