force-app/main/default/objects/Batch__c/fields/FirstFermentationStartDate__c.field-meta.xml
<CustomField>
    <fullName>FirstFermentationStartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date that the batch was started the first fermentation.</description>
    <inlineHelpText>Date that the batch was started the first fermentation.</inlineHelpText>
    <label>First Fermentation Start Date</label>
    <type>Date</type>
</CustomField>