force-app/main/default/objects/Batch__c/fields/SecondFermentationDuration__c.field-meta.xml
<CustomField>
    <fullName>SecondFermentationDuration__c</fullName>
    <description>Number of days the batch was or currently is in the second fermentation stage.</description>
    <formula>BLANKVALUE(ActualSecondFermentationEndDate__c, TODAY()) -  SecondFermentationStartDate__c</formula>
    <inlineHelpText>Number of days the batch was or currently is in the second fermentation stage.</inlineHelpText>
    <label>Second Fermentation Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>