force-app/main/default/objects/Batch__c/fields/SecondFermentationEndDate__c.field-meta.xml
<CustomField>
    <fullName>SecondFermentationEndDate__c</fullName>
    <description>Date when the second fermentation should be complete.</description>
    <formula>SecondFermentationStartDate__c + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when the second fermentation should complete.</inlineHelpText>
    <label>Second Fermentation End Date</label>
    <type>Date</type>
</CustomField>