force-app/main/default/objects/Batch__c/fields/SecondFermentationStartDate__c.field-meta.xml
<CustomField>
    <fullName>SecondFermentationStartDate__c</fullName>
    <description>Date when the batch was bottled to start the second fermentation.</description>
    <inlineHelpText>Date when the batch was bottled to start the second fermentation.</inlineHelpText>
    <label>Second Fermentation Start Date</label>
    <type>Date</type>
</CustomField>