force-app/main/default/objects/Batch__c/fields/TeaBlend__c.field-meta.xml
<CustomField>
    <fullName>TeaBlend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tea Blend</label>
    <referenceTo>TeaBlend__c</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>